fix(styles): update --muted-foreground color variable for better contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,7 +96,8 @@
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.274 0.006 286.033);
-  --muted-foreground: oklch(0.705 0.015 286.067);
+  /* --muted-foreground: oklch(0.705 0.015 286.067); */
+  --muted-foreground: oklch(0.4806 0.0944 279.27);
   --accent: oklch(0.274 0.006 286.033);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
